build sucsess with better fix screen